--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>802</width>
-    <height>691</height>
+    <width>800</width>
+    <height>658</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -696,7 +696,7 @@
           <property name="title">
            <string>Saison</string>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_20">
+          <layout class="QHBoxLayout" name="horizontalLayout_28">
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_8">
              <item>
@@ -881,6 +881,42 @@
                  <property name="minimumSize">
                   <size>
                    <width>91</width>
+                   <height>0</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>TextLabel</string>
+                 </property>
+                </widget>
+               </item>
+              </layout>
+             </item>
+             <item>
+              <layout class="QHBoxLayout" name="horizontalLayout_20">
+               <item>
+                <widget class="QLabel" name="label_38">
+                 <property name="font">
+                  <font>
+                   <weight>75</weight>
+                   <bold>true</bold>
+                  </font>
+                 </property>
+                 <property name="text">
+                  <string>Langue:</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_39">
+                 <property name="sizePolicy">
+                  <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+                   <horstretch>0</horstretch>
+                   <verstretch>0</verstretch>
+                  </sizepolicy>
+                 </property>
+                 <property name="minimumSize">
+                  <size>
+                   <width>281</width>
                    <height>0</height>
                   </size>
                  </property>
@@ -1116,8 +1152,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>264</width>
-                <height>264</height>
+                <width>259</width>
+                <height>278</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
@@ -1510,18 +1546,61 @@
             </item>
            </widget>
           </item>
+          <item>
+           <spacer name="horizontalSpacer_4">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
          </layout>
         </item>
         <item>
-         <widget class="QPushButton" name="pushButton_11">
-          <property name="text">
-           <string>Sauvegarder les paramètres</string>
+         <spacer name="verticalSpacer_3">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
           </property>
-          <property name="icon">
-           <iconset>
-            <normaloff>icons/document-export.ico</normaloff>icons/document-export.ico</iconset>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>475</height>
+           </size>
           </property>
-         </widget>
+         </spacer>
+        </item>
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout_27">
+          <item>
+           <widget class="QPushButton" name="pushButton_11">
+            <property name="text">
+             <string>Sauvegarder les paramètres</string>
+            </property>
+            <property name="icon">
+             <iconset>
+              <normaloff>icons/document-export.ico</normaloff>icons/document-export.ico</iconset>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
         </item>
        </layout>
       </widget>
@@ -1534,8 +1613,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>802</width>
-     <height>21</height>
+     <width>800</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
