--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>658</height>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>4</number>
+       <number>0</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -246,7 +246,7 @@
             </attribute>
             <column>
              <property name="text">
-              <string>Episode</string>
+              <string>Série</string>
              </property>
             </column>
             <column>
@@ -256,7 +256,7 @@
             </column>
             <column>
              <property name="text">
-              <string>Série</string>
+              <string>Episode</string>
              </property>
             </column>
            </widget>
@@ -1153,7 +1153,7 @@
                 <x>0</x>
                 <y>0</y>
                 <width>259</width>
-                <height>278</height>
+                <height>179</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
@@ -1473,6 +1473,102 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_6">
+       <attribute name="title">
+        <string>Statistiques</string>
+       </attribute>
+       <widget class="QGroupBox" name="groupBox_4">
+        <property name="geometry">
+         <rect>
+          <x>0</x>
+          <y>0</y>
+          <width>441</width>
+          <height>281</height>
+         </rect>
+        </property>
+        <property name="title">
+         <string>Visionnage</string>
+        </property>
+        <widget class="QLabel" name="label_41">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>60</y>
+           <width>271</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Nombre de séries en cours:</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_42">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>30</y>
+           <width>171</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Nombre de séries terminées:</string>
+         </property>
+        </widget>
+        <widget class="QLabel" name="label_43">
+         <property name="geometry">
+          <rect>
+           <x>20</x>
+           <y>90</y>
+           <width>171</width>
+           <height>16</height>
+          </rect>
+         </property>
+         <property name="text">
+          <string>Nombre  de séries à voir:</string>
+         </property>
+        </widget>
+        <widget class="QProgressBar" name="progressBar">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>30</y>
+           <width>118</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="value">
+          <number>24</number>
+         </property>
+        </widget>
+        <widget class="QProgressBar" name="progressBar_2">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>60</y>
+           <width>118</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="value">
+          <number>24</number>
+         </property>
+        </widget>
+        <widget class="QProgressBar" name="progressBar_3">
+         <property name="geometry">
+          <rect>
+           <x>200</x>
+           <y>90</y>
+           <width>118</width>
+           <height>23</height>
+          </rect>
+         </property>
+         <property name="value">
+          <number>24</number>
+         </property>
+        </widget>
+       </widget>
+      </widget>
       <widget class="QWidget" name="tab_4">
        <attribute name="icon">
         <iconset>
@@ -1569,7 +1665,7 @@
           <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
-            <height>475</height>
+            <height>486</height>
            </size>
           </property>
          </spacer>
