--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>669</height>
+    <height>691</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -142,7 +142,7 @@
                <bool>false</bool>
               </attribute>
               <attribute name="horizontalHeaderStretchLastSection">
-               <bool>true</bool>
+               <bool>false</bool>
               </attribute>
               <attribute name="verticalHeaderVisible">
                <bool>false</bool>
@@ -233,7 +233,7 @@
              <enum>QAbstractItemView::SelectRows</enum>
             </property>
             <attribute name="horizontalHeaderStretchLastSection">
-             <bool>true</bool>
+             <bool>false</bool>
             </attribute>
             <attribute name="verticalHeaderVisible">
              <bool>false</bool>
@@ -629,7 +629,7 @@
                </property>
                <property name="icon">
                 <iconset>
-                 <normaloff>icons/edit-add-4.ico</normaloff>icons/edit-add-4.ico</iconset>
+                 <normaloff>icons/document-properties-4.ico</normaloff>icons/document-properties-4.ico</iconset>
                </property>
               </widget>
              </item>
@@ -1152,8 +1152,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>259</width>
-                <height>179</height>
+                <width>257</width>
+                <height>288</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
@@ -1710,7 +1710,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>22</height>
+     <height>27</height>
     </rect>
    </property>
   </widget>
