--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>691</height>
+    <height>690</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -280,6 +280,9 @@
                 <height>31</height>
                </size>
               </property>
+              <property name="toolTip">
+               <string>Ouvre le dossier de la série (si celui-ci à été défini)</string>
+              </property>
               <property name="text">
                <string>Ouvrir le dossier</string>
               </property>
@@ -376,6 +379,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="pushButton_14">
+            <property name="toolTip">
+             <string>Effacer la barre de recherche</string>
+            </property>
             <property name="text">
              <string/>
             </property>
@@ -432,18 +438,42 @@
           <property name="title">
            <string>Série</string>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_9">
+          <layout class="QHBoxLayout" name="horizontalLayout_29">
            <item>
             <layout class="QVBoxLayout" name="verticalLayout_5">
              <item>
-              <widget class="QComboBox" name="comboBox_2">
-               <property name="editable">
-                <bool>false</bool>
-               </property>
-               <property name="frame">
-                <bool>true</bool>
-               </property>
-              </widget>
+              <layout class="QHBoxLayout" name="horizontalLayout_9">
+               <item>
+                <widget class="QComboBox" name="comboBox_2">
+                 <property name="editable">
+                  <bool>false</bool>
+                 </property>
+                 <property name="frame">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="randomSerieButton">
+                 <property name="maximumSize">
+                  <size>
+                   <width>32</width>
+                   <height>28</height>
+                  </size>
+                 </property>
+                 <property name="toolTip">
+                  <string>Sélectionne une série aléatoirement</string>
+                 </property>
+                 <property name="text">
+                  <string/>
+                 </property>
+                 <property name="icon">
+                  <iconset>
+                   <normaloff>icons/edit-clear-2.ico</normaloff>icons/edit-clear-2.ico</iconset>
+                 </property>
+                </widget>
+               </item>
+              </layout>
              </item>
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_6">
@@ -567,6 +597,9 @@
                  <property name="enabled">
                   <bool>true</bool>
                  </property>
+                 <property name="toolTip">
+                  <string>Ouvre le dossier de la série (si celui-ci à été défini)</string>
+                 </property>
                  <property name="text">
                   <string>Ouvrir le dossier</string>
                  </property>
@@ -624,6 +657,9 @@
                  <height>27</height>
                 </size>
                </property>
+               <property name="toolTip">
+                <string>Ajoute une nouvelle série</string>
+               </property>
                <property name="text">
                 <string>Ajouter</string>
                </property>
@@ -640,6 +676,9 @@
                  <width>91</width>
                  <height>27</height>
                 </size>
+               </property>
+               <property name="toolTip">
+                <string>Editer les informations de la série sélectionnée</string>
                </property>
                <property name="layoutDirection">
                 <enum>Qt::LeftToRight</enum>
@@ -663,6 +702,9 @@
                  <width>91</width>
                  <height>31</height>
                 </size>
+               </property>
+               <property name="toolTip">
+                <string>Supprime la série sélectionnée</string>
                </property>
                <property name="text">
                 <string>Supprimer</string>
@@ -1193,6 +1235,9 @@
                  <height>27</height>
                 </size>
                </property>
+               <property name="toolTip">
+                <string>Ajoute une nouvelle saison à la série sélectionnée</string>
+               </property>
                <property name="text">
                 <string>Ajouter</string>
                </property>
@@ -1210,6 +1255,9 @@
                  <height>27</height>
                 </size>
                </property>
+               <property name="toolTip">
+                <string>Editer les informations de la saison sélectionné</string>
+               </property>
                <property name="text">
                 <string>Editer</string>
                </property>
@@ -1226,6 +1274,9 @@
                  <width>91</width>
                  <height>27</height>
                 </size>
+               </property>
+               <property name="toolTip">
+                <string>Supprime la saison sélectionnée</string>
                </property>
                <property name="text">
                 <string>Supprimer</string>
