Ajout d'une barre d'avancement dans l'onglet planning

--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -25,7 +25,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -257,6 +257,11 @@
             <column>
              <property name="text">
               <string>Episode</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Avancement</string>
              </property>
             </column>
            </widget>
