--- a/ressources/SeasonModal.ui
+++ b/ressources/SeasonModal.ui
@@ -393,6 +393,15 @@
           <normaloff>icons/tick.ico</normaloff>icons/tick.ico</iconset>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Abandonné</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons/edit-delete-5.ico</normaloff>icons/edit-delete-5.ico</iconset>
+        </property>
+       </item>
       </widget>
      </item>
     </layout>
@@ -407,8 +416,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>395</width>
-        <height>93</height>
+        <width>408</width>
+        <height>107</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout">
@@ -418,8 +427,8 @@
           <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Cantarell'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Noto Sans';&quot;&gt;Voici les notes pour cette saison. Vous pouver écrire ici tout ce qui vous passe par la tête !&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'Noto Sans'; font-size:10pt;&quot;&gt;Voici les notes pour cette saison. Vous pouver écrire ici tout ce qui vous passe par la tête !&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
         </widget>
        </item>
