Ajout d'une nouvelle liste simple. Les tris arriverons plus tard.

--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -25,7 +25,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>6</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -1381,8 +1381,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>467</width>
-                <height>384</height>
+                <width>255</width>
+                <height>175</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
@@ -1490,6 +1490,67 @@
             </layout>
            </item>
           </layout>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tab_7">
+       <attribute name="icon">
+        <iconset>
+         <normaloff>icons/application-view-list.ico</normaloff>icons/application-view-list.ico</iconset>
+       </attribute>
+       <attribute name="title">
+        <string>Liste 2</string>
+       </attribute>
+       <layout class="QGridLayout" name="gridLayout_4">
+        <item row="0" column="0">
+         <widget class="QTableWidget" name="full_list_table">
+          <property name="selectionMode">
+           <enum>QAbstractItemView::NoSelection</enum>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <attribute name="horizontalHeaderStretchLastSection">
+           <bool>true</bool>
+          </attribute>
+          <column>
+           <property name="text">
+            <string>ID</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Nom</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>ID Saison</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Titre saison</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Nombre d'épisodes</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Année</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_40">
+          <property name="text">
+           <string>Nombre d'éléments: </string>
+          </property>
          </widget>
         </item>
        </layout>
@@ -1845,6 +1906,15 @@
             <item>
              <property name="text">
               <string>Liste</string>
+             </property>
+             <property name="icon">
+              <iconset>
+               <normaloff>icons/application-view-list.ico</normaloff>icons/application-view-list.ico</iconset>
+             </property>
+            </item>
+            <item>
+             <property name="text">
+              <string>Liste 2</string>
              </property>
              <property name="icon">
               <iconset>
