--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -1381,8 +1381,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>467</width>
-                <height>384</height>
+                <width>255</width>
+                <height>175</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
@@ -2056,25 +2056,12 @@
          <rect>
           <x>10</x>
           <y>190</y>
-          <width>161</width>
+          <width>221</width>
           <height>28</height>
          </rect>
         </property>
         <property name="text">
-         <string>Exporter la liste complète</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_16">
-        <property name="geometry">
-         <rect>
-          <x>180</x>
-          <y>190</y>
-          <width>161</width>
-          <height>28</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Exporter la liste des séries</string>
+         <string>Exporter la liste des (&quot;saisons&quot;)</string>
         </property>
        </widget>
       </widget>
