- Ajout d'un nouvel onglet A propos qui remonter les information des divers composants (Python, Qt, PyQt, ...) - Ajout de nouveau champ sur l'onlet liste 2 - Ajout lors de l'export d'ouvrir le dossier ou bien de ne rien faire.

--- a/ressources/MainWindow.ui
+++ b/ressources/MainWindow.ui
@@ -25,7 +25,7 @@
        <enum>QTabWidget::Rounded</enum>
       </property>
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideNone</enum>
@@ -47,9 +47,9 @@
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
-             <layout class="QHBoxLayout" name="horizontalLayout_30">
+             <layout class="QHBoxLayout" name="horizontalLayout_31">
               <item>
-               <spacer name="horizontalSpacer_6">
+               <spacer name="horizontalSpacer_13">
                 <property name="orientation">
                  <enum>Qt::Horizontal</enum>
                 </property>
@@ -61,6 +61,13 @@
                 </property>
                </spacer>
               </item>
+             </layout>
+            </item>
+            <item>
+             <layout class="QHBoxLayout" name="horizontalLayout_30" stretch="30,0">
+              <property name="sizeConstraint">
+               <enum>QLayout::SetDefaultConstraint</enum>
+              </property>
               <item>
                <widget class="QPushButton" name="pushButton_9">
                 <property name="maximumSize">
@@ -77,6 +84,19 @@
                   <normaloff>icons/today.ico</normaloff>icons/today.ico</iconset>
                 </property>
                </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer_6">
+                <property name="orientation">
+                 <enum>Qt::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
              </layout>
             </item>
@@ -159,15 +179,15 @@
                <bool>false</bool>
               </attribute>
               <attribute name="horizontalHeaderStretchLastSection">
-               <bool>false</bool>
+               <bool>true</bool>
               </attribute>
               <attribute name="verticalHeaderVisible">
                <bool>false</bool>
               </attribute>
-              <attribute name="verticalHeaderMinimumSectionSize">
+              <attribute name="verticalHeaderDefaultSectionSize">
                <number>20</number>
               </attribute>
-              <attribute name="verticalHeaderDefaultSectionSize">
+              <attribute name="verticalHeaderMinimumSectionSize">
                <number>20</number>
               </attribute>
               <column>
@@ -274,16 +294,19 @@
              <enum>QAbstractItemView::SelectRows</enum>
             </property>
             <attribute name="horizontalHeaderStretchLastSection">
-             <bool>false</bool>
+             <bool>true</bool>
             </attribute>
             <attribute name="verticalHeaderVisible">
              <bool>false</bool>
             </attribute>
+            <attribute name="verticalHeaderDefaultSectionSize">
+             <number>20</number>
+            </attribute>
             <attribute name="verticalHeaderMinimumSectionSize">
              <number>20</number>
             </attribute>
-            <attribute name="verticalHeaderDefaultSectionSize">
-             <number>20</number>
+            <attribute name="verticalHeaderStretchLastSection">
+             <bool>false</bool>
             </attribute>
             <column>
              <property name="text">
@@ -484,8 +507,8 @@
           <property name="title">
            <string>Série</string>
           </property>
-          <layout class="QHBoxLayout" name="horizontalLayout_29">
-           <item>
+          <layout class="QGridLayout" name="gridLayout_12">
+           <item row="0" column="0">
             <layout class="QVBoxLayout" name="verticalLayout_5">
              <item>
               <layout class="QHBoxLayout" name="horizontalLayout_9">
@@ -659,7 +682,7 @@
              </item>
             </layout>
            </item>
-           <item>
+           <item row="0" column="1">
             <widget class="QLabel" name="label_30">
              <property name="enabled">
               <bool>true</bool>
@@ -693,7 +716,7 @@
              </property>
             </widget>
            </item>
-           <item>
+           <item row="0" column="2">
             <layout class="QVBoxLayout" name="verticalLayout_7">
              <item>
               <widget class="QPushButton" name="pushButton">
@@ -1381,8 +1404,8 @@
                <rect>
                 <x>0</x>
                 <y>0</y>
-                <width>467</width>
-                <height>384</height>
+                <width>479</width>
+                <height>335</height>
                </rect>
               </property>
               <layout class="QGridLayout" name="gridLayout_3">
@@ -1513,10 +1536,13 @@
         <item row="0" column="0">
          <widget class="QTableWidget" name="full_list_table">
           <property name="selectionMode">
-           <enum>QAbstractItemView::NoSelection</enum>
+           <enum>QAbstractItemView::SingleSelection</enum>
           </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <property name="sortingEnabled">
+           <bool>true</bool>
           </property>
           <attribute name="horizontalHeaderStretchLastSection">
            <bool>true</bool>
@@ -1544,6 +1570,16 @@
           <column>
            <property name="text">
             <string>Année</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Etat</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Nombre de visionnages</string>
            </property>
           </column>
          </widget>
@@ -2207,6 +2243,123 @@
         </item>
        </layout>
       </widget>
+      <widget class="QWidget" name="tab_8">
+       <attribute name="title">
+        <string>A propos</string>
+       </attribute>
+       <widget class="QWidget" name="">
+        <property name="geometry">
+         <rect>
+          <x>11</x>
+          <y>21</y>
+          <width>260</width>
+          <height>100</height>
+         </rect>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_13">
+         <item row="0" column="1">
+          <widget class="QLabel" name="label_70">
+           <property name="font">
+            <font>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>application_version</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_71">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>Qt</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_76">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>Python</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_73">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>PyQt</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLabel" name="label_72">
+           <property name="font">
+            <font>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>qt_version</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QLabel" name="label_74">
+           <property name="font">
+            <font>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>pyqt_version</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLabel" name="label_75">
+           <property name="font">
+            <font>
+             <italic>true</italic>
+            </font>
+           </property>
+           <property name="text">
+            <string>python_version</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_69">
+           <property name="font">
+            <font>
+             <weight>75</weight>
+             <bold>true</bold>
+            </font>
+           </property>
+           <property name="text">
+            <string>MyAnimeManager 2</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </widget>
      </widget>
     </item>
    </layout>
@@ -2217,7 +2370,7 @@
      <x>0</x>
      <y>0</y>
      <width>1115</width>
-     <height>24</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
